# kafka

./: .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  envconfig.sh  install.bat  install.sh  kfk.c  kfk.q  travis_setup.sh
examples/: test_consumer.q  test_offsetc.q  test_producer.q
q/: kfk.q
src/: clients.c  consumer.c  decode.c  kfk_utils.c  offsets.c  producer.c  q_utils.c  topic.c
